# engram

./: .env.example  .gitignore  .mcp.json  README.md  config.yaml  justfile  pyproject.toml
.github/workflows/: ci.yml
docs/design/: leader-follower-concurrency.md  ui-redesign-plan.md  ui-redesign.md
docs/superpowers/plans/: 2026-04-12-engram-implementation.md  2026-04-14-engram-installation.md
docs/superpowers/specs/: 2026-04-12-engram-design.md  2026-04-14-engram-installation-design.md  2026-04-14-leader-follower-concurrency-design.md
src/engram/: __init__.py  __main__.py  app.py  cli.py  config.py  curator.py  injector.py  logging.py  main.py  mcp.py  memory.py  models.py  server.py  setup.py
src/engram/api/: __init__.py  app.py  dependencies.py  models.py
src/engram/api/routes/: chat.py  config.py  health.py  imprints.py  injection.py  preferences.py  scopes.py
src/engram/collector/: __init__.py  agent.py  tools.py
src/engram/core/: __init__.py  config.py  logging.py  models.py
src/engram/curator/: __init__.py  agent.py  tools.py
src/engram/injection/: __init__.py  injector.py
src/engram/llm/: __init__.py  anthropic.py  base.py  bedrock.py
src/engram/mcp/: __init__.py  server.py
src/engram/storage/: __init__.py  base.py  mem0.py  memory.py
src/engram/ui/: index.html
tests/: conftest.py  fakes.py  test_cli.py  test_curator.py  test_injector.py  test_integration.py  test_logging.py  test_main.py  test_memory.py  test_server.py  test_setup.py
tests/test_api/: conftest.py  test_chat.py  test_config.py  test_health.py  test_imprints.py  test_preferences.py
tests/test_collector/: test_agent.py  test_tools.py
tests/test_curator/: test_agent.py  test_tools.py
tests/test_injection/: test_injector.py
tests/test_storage/: test_contract.py
