[project]
name = "engram"
version = "0.1.0"
description = "Self-curating coding preference memory for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "DannyMor" }]
keywords = ["claude", "mcp", "preferences", "coding", "memory"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mem0ai==1.0.11",
    "fastapi==0.135.3",
    "uvicorn==0.44.0",
    "fastmcp==3.2.3",
    "anthropic==0.94.0",
    "pydantic==2.12.5",
    "qdrant-client==1.17.1",
    "fastembed==0.8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.10",
    "pyright==1.1.408",
    "pytest==9.0.3",
    "pytest-asyncio>=1.0",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/DannyMor/engram"
Repository = "https://github.com/DannyMor/engram"

[project.scripts]
engram = "engram.main:main"

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "standard"
include = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]
